# rio-rs-ex

./: .gitignore  readme.md
app/: Cargo.toml  build.rs
app/.cargo/: config.toml
app/scripts/: app.sh  config  debug-server.sh  deploy-debug.sh  deploy-release.sh  kill-app.sh  pre-launch.sh
app/src/: main.rs
app/src/fpga/: NiFpga.c  NiFpga_fpga.h  mod.rs
fpga/: fpga.lvproj
fpga/src/: fpga.vi
