[package]
name = "app"
version = "0.1.0"
authors = ["David Taylor <david.taylor@lennoxintl.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nifpga = "0.1.2"
fehler = "1.0.0"
sysinfo = "0.14.4"

[build-dependencies]
cc = "1.0.54"